# docmetrics

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  README.md  action.yml  compressed_mila_docs.md  docmetrics_docs_questions.yaml  index.html  main.py  make_comparison_grid.sh  mila_docs_questions.yaml  mkdocs.yaml  objects.inv  pyproject.toml  quiz.yaml  sample_questions.yaml  score.py
.claude/: settings.json
.github/actions/evaluate-docs/: action.yml
.github/scripts/: format_comment.py
.github/workflows/: build.yaml  ci.yml  docs-quality-example.yml  docs.yaml  post-pr-comment.yml  publish.yaml  test_action.yaml
docmetrics/: __init__.py  __main__.py  main.py  objects.py  quiz.py
docs/: index.md  reference.md  usage.md
docs/reference/: docmetrics.md
post-comment/: action.yml
reference/: index.html
search/: search_index.json
tests/: quiz_v2.yaml  short_quiz.yaml  test_format_comment.py  test_integration.py  test_main.py  test_quiz.py
usage/: index.html
