[project]
name = "docmetrics"
description = "A new project/tool called docmetrics."
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "google-genai>=1.52.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "simple-parsing>=0.1.7",
]


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "black>=24.10.0",
]

[tool.pytest.ini_options]
testpaths = ["docmetrics", "tests"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]

[tool.uv]
managed = true


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"

[tool.ruff]
line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docmetrics"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
