[project]
name = "docmetrics"
description = "A new project/tool called docmetrics."
readme = "README.md"
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "google-genai>=1.52.0",
    "httpx>=0.28.1",
    "ollama>=0.4.7",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "questionary>=2.0.1",
    "rich>=14.2.0",
    "simple-parsing>=0.1.7",
    "tqdm>=4.67.3",
]

[project.scripts]
docmetrics = "docmetrics.main:main"


[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "uv-dynamic-versioning>=0.2.0",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
    "black>=24.10.0",
]

[tool.pytest.ini_options]
testpaths = ["docmetrics", "tests"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]
markers = [
    "integration: requires a live Ollama instance (set DOCMETRICS_INTEGRATION_TEST=1 to run)",
]
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types:",
]

[tool.uv]
managed = true


[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[tool.ruff]
line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docmetrics"]

[tool.hatch.version]
source = "uv-dynamic-versioning"
